Added Bunner Top

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -140,8 +140,8 @@
             "salon": "الصالون",
             "massage": "التدليك",
             "course": "الدورات",
-            "blog": "المدونة",
-            "testimonial": "الآراء",
+            "media": "وسائل الإعلام",
+            "stories": "القصص",
             "bonus": "العروض"
         }
     },
@@ -152,5 +152,8 @@
         "accessibilityStatement": "بيان إمكانية الوصول",
         "sitemap": "خريطة الموقع",
         "designBy": "التصميم والترويج بواسطة"
+    },
+    "trustCareBanner": {
+        "title": "الثقة والرعاية — مصدر سلامك وصحتك"
     }
 }
