--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -140,8 +140,8 @@
             "salon": "Салон",
             "massage": "Массаж",
             "course": "Курсы",
-            "blog": "Блог",
-            "testimonial": "Отзывы",
+            "media": "Медиа",
+            "stories": "Истории",
             "bonus": "Акции"
         }
     },
@@ -159,5 +159,8 @@
         "details": "Детали ошибки:",
         "retry": "Попробовать снова",
         "goHome": "На главную"
+    },
+    "trustCareBanner": {
+        "title": "Доверие и забота — ваш источник покоя и здоровья"
     }
 }
