Added two blockes

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -153,6 +153,15 @@
         "sitemap": "خريطة الموقع",
         "designBy": "التصميم والترويج بواسطة"
     },
+    "buttons": {
+        "bookAppointment": "حجز موعد"
+    },
+    "info": {
+        "mainTitle": {
+            "title": "دكتور سيرجي تونيتسكي - أمراض النساء الحديثة والعلاج الجراحي",
+            "description": "Dr. Sergey Tonitsky is a specialist in women's medicine and a specialist in gynecological surgery. He has extensive experience in various gynecological surgeries, including therapeutic excisions and terminations of pregnancy. He performs surgeries in the private hospitals Herzliya Medical Center, Rafael and Assuta Ramat HaChayal. Dr. Sergey Tonitsky is a specialist in women's medicine and a specialist in gynecological surgery. He has extensive experience in various gynecological surgeries, including therapeutic excisions and terminations of pregnancy. He performs surgeries in the private hospitals Herzliya Medical Center, Rafael and Assuta Ramat HaChayal."
+        }
+    },
     "trustCareBanner": {
         "title": "الثقة والرعاية — مصدر سلامك وصحتك"
     }
