--- a/public/locales/he/common.json
+++ b/public/locales/he/common.json
@@ -153,6 +153,15 @@
     "sitemap": "מפת האתר",
     "designBy": "עיצוב וקידום על ידי"
   },
+  "buttons": {
+    "bookAppointment": "קבע תור"
+  },
+  "info": {
+    "mainTitle": {
+      "title": "דוקטור סרגיי טוניצקי - גינקולוגיה מודרנית וטיפול כירורגי",
+      "description": "Dr. Sergey Tonitsky is a specialist in women's medicine and a specialist in gynecological surgery. He has extensive experience in various gynecological surgeries, including therapeutic excisions and terminations of pregnancy. He performs surgeries in the private hospitals Herzliya Medical Center, Rafael and Assuta Ramat HaChayal. Dr. Sergey Tonitsky is a specialist in women's medicine and a specialist in gynecological surgery. He has extensive experience in various gynecological surgeries, including therapeutic excisions and terminations of pregnancy. He performs surgeries in the private hospitals Herzliya Medical Center, Rafael and Assuta Ramat HaChayal."
+    }
+  },
   "trustCareBanner": {
     "title": "אמון וטיפול — מקור השלום והבריאות שלך"
   }
