--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -159,7 +159,11 @@
   "info": {
     "mainTitle": {
       "title": "Docteur Sergey Tunitsky - Gynécologie moderne et traitement chirurgical",
-      "description": "Dr. Sergey Tonitsky is a specialist in women's medicine and a specialist in gynecological surgery. He has extensive experience in various gynecological surgeries, including therapeutic excisions and terminations of pregnancy. He performs surgeries in the private hospitals Herzliya Medical Center, Rafael and Assuta Ramat HaChayal. Dr. Sergey Tonitsky is a specialist in women's medicine and a specialist in gynecological surgery. He has extensive experience in various gynecological surgeries, including therapeutic excisions and terminations of pregnancy. He performs surgeries in the private hospitals Herzliya Medical Center, Rafael and Assuta Ramat HaChayal."
+      "description": "Dr. Sergey Tunitsky est un gynécologue israélien renommé, spécialiste de la plus haute catégorie et expert reconnu dans le traitement de toutes les formes d'infertilité féminine et des maladies du système reproducteur féminin. Il applique des protocoles cliniques modernes, des techniques chirurgicales minimalement invasives et une approche individuelle pour chaque patiente.\n\nL'expérience clinique du Dr. Tunitsky dépasse 25 ans. Son expertise en diagnostic, traitement chirurgical et prévention des maladies gynécologiques fait de lui l'un des spécialistes les plus recherchés en Israël.",
+      "biography": "Biographie et expérience clinique",
+      "biographyText": "Dr. Sergey Tunitsky a progressé de diplômé d'institut médical à médecin-chef du département gynécologique et chirurgien principal.\n\nPositions cliniques :\n• Médecin-chef du département gynécologique à l'hôpital Hillel Yaffe\n• Gynécologue principal au Herzliya Medical Center\n\nIl combine pratique clinique, activités d'enseignement et participation à des conférences internationales de gynécologie, améliorant constamment ses compétences professionnelles.",
+      "subtitle": "Expert en santé féminine",
+      "learnMore": "En savoir plus"
     }
   },
   "trustCareBanner": {
