--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -159,7 +159,11 @@
   "info": {
     "mainTitle": {
       "title": "Doktor Sergey Tunitsky - Moderne Gynäkologie und chirurgische Behandlung",
-      "description": "Dr. Sergey Tonitsky is a specialist in women's medicine and a specialist in gynecological surgery. He has extensive experience in various gynecological surgeries, including therapeutic excisions and terminations of pregnancy. He performs surgeries in the private hospitals Herzliya Medical Center, Rafael and Assuta Ramat HaChayal. Dr. Sergey Tonitsky is a specialist in women's medicine and a specialist in gynecological surgery. He has extensive experience in various gynecological surgeries, including therapeutic excisions and terminations of pregnancy. He performs surgeries in the private hospitals Herzliya Medical Center, Rafael and Assuta Ramat HaChayal."
+      "description": "Dr. Sergey Tunitsky ist ein renommierter israelischer Gynäkologe, Spezialist der höchsten Kategorie und anerkannter Experte für die Behandlung aller Formen weiblicher Unfruchtbarkeit und Erkrankungen des weiblichen Fortpflanzungssystems. Er wendet moderne klinische Protokolle, minimalinvasive chirurgische Techniken und einen individuellen Ansatz für jede Patientin an.\n\nDr. Tunitskys klinische Erfahrung übersteigt 25 Jahre. Seine Expertise in Diagnose, chirurgischer Behandlung und Prävention gynäkologischer Erkrankungen macht ihn zu einem der gefragtesten Spezialisten in Israel.",
+      "biography": "Biografie und klinische Erfahrung",
+      "biographyText": "Dr. Sergey Tunitsky hat sich vom Medizinabsolventen zum Chefarzt der gynäkologischen Abteilung und führenden Chirurgen entwickelt.\n\nKlinische Positionen:\n• Chefarzt der gynäkologischen Abteilung am Hillel Yaffe Krankenhaus\n• Führender Gynäkologe am Herzliya Medical Center\n\nEr verbindet klinische Praxis, Lehrtätigkeit und Teilnahme an internationalen Gynäkologie-Konferenzen und verbessert ständig seine beruflichen Fähigkeiten.",
+      "subtitle": "Experte für Frauengesundheit",
+      "learnMore": "Mehr erfahren"
     }
   },
   "trustCareBanner": {
