--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -159,7 +159,11 @@
   "info": {
     "mainTitle": {
       "title": "Doctor Sergey Tunitsky - Ginecología moderna y tratamiento quirúrgico",
-      "description": "Dr. Sergey Tonitsky is a specialist in women's medicine and a specialist in gynecological surgery. He has extensive experience in various gynecological surgeries, including therapeutic excisions and terminations of pregnancy. He performs surgeries in the private hospitals Herzliya Medical Center, Rafael and Assuta Ramat HaChayal. Dr. Sergey Tonitsky is a specialist in women's medicine and a specialist in gynecological surgery. He has extensive experience in various gynecological surgeries, including therapeutic excisions and terminations of pregnancy. He performs surgeries in the private hospitals Herzliya Medical Center, Rafael and Assuta Ramat HaChayal."
+      "description": "Dr. Sergey Tunitsky es un reconocido ginecólogo israelí, especialista de la más alta categoría y experto reconocido en el tratamiento de todas las formas de infertilidad femenina y enfermedades del sistema reproductor femenino. Aplica protocolos clínicos modernos, técnicas quirúrgicas mínimamente invasivas y un enfoque individual para cada paciente.\n\nLa experiencia clínica del Dr. Tunitsky supera los 25 años. Su experiencia en diagnóstico, tratamiento quirúrgico y prevención de enfermedades ginecológicas lo convierte en uno de los especialistas más solicitados en Israel.",
+      "biography": "Biografía y experiencia clínica",
+      "biographyText": "Dr. Sergey Tunitsky ha progresado de graduado del instituto médico a médico jefe del departamento ginecológico y cirujano principal.\n\nPosiciones clínicas:\n• Médico jefe del departamento ginecológico en el Hospital Hillel Yaffe\n• Ginecólogo principal en Herzliya Medical Center\n\nCombina práctica clínica, actividades docentes y participación en conferencias internacionales de ginecología, mejorando constantemente sus habilidades profesionales.",
+      "subtitle": "Experto en salud femenina",
+      "learnMore": "Saber más"
     }
   },
   "trustCareBanner": {
