--- a/public/locales/he/common.json
+++ b/public/locales/he/common.json
@@ -159,7 +159,11 @@
   "info": {
     "mainTitle": {
       "title": "דוקטור סרגיי טוניצקי - גינקולוגיה מודרנית וטיפול כירורגי",
-      "description": "Dr. Sergey Tonitsky is a specialist in women's medicine and a specialist in gynecological surgery. He has extensive experience in various gynecological surgeries, including therapeutic excisions and terminations of pregnancy. He performs surgeries in the private hospitals Herzliya Medical Center, Rafael and Assuta Ramat HaChayal. Dr. Sergey Tonitsky is a specialist in women's medicine and a specialist in gynecological surgery. He has extensive experience in various gynecological surgeries, including therapeutic excisions and terminations of pregnancy. He performs surgeries in the private hospitals Herzliya Medical Center, Rafael and Assuta Ramat HaChayal."
+      "description": "ד\"ר סרגיי טוניצקי הוא גינקולוג ישראלי מוכר, מומחה מהקטגוריה הגבוהה ביותר ומומחה מוכר בטיפול בכל צורות אי הפוריות הנשית ומחלות מערכת הרבייה הנשית. הוא מיישם פרוטוקולים קליניים מודרניים, טכניקות כירורגיות פולשניות מינימלית וגישה אישית לכל מטופלת.\n\nהניסיון הקליני של ד\"ר טוניצקי עולה על 25 שנה. המומחיות שלו באבחון, טיפול כירורגי ומניעת מחלות גינקולוגיות הופכת אותו לאחד המומחים המבוקשים ביותר בישראל.",
+      "biography": "ביוגרפיה וניסיון קליני",
+      "biographyText": "ד\"ר סרגיי טוניצקי התקדם מבוגר מכון רפואי לרופא ראשי במחלקה הגינקולוגית וכירורג מוביל.\n\nתפקידים קליניים:\n• רופא ראשי במחלקה הגינקולוגית בבית החולים הילל יפה\n• גינקולוג מוביל במרכז הרפואי הרצליה\n\nהוא משלב פרקטיקה קלינית, פעילות הוראה והשתתפות בכנסים בינלאומיים בגינקולוגיה, ומשפר ללא הרף את כישוריו המקצועיים.",
+      "subtitle": "מומחה לבריאות נשים",
+      "learnMore": "למד עוד"
     }
   },
   "trustCareBanner": {
